<resources>
    <string name="app_name">RecyclerView_WS_Volley</string>
    <string name="txt_title1">EVALUADORES</string>
    <string name="txt_title2">EVALUADOS</string>
    <string name="txt_name">Nombre de Evaluador</string>
    <string name="txt_area">Area</string>
    <string name="txt_idEvaluador">IdEvaluador</string>
    <string name="txt_nombreEvaluado">Nombre de Evaluado</string>
    <string name="txt_fechaEvalIni">Fecha Evaluación Inicio</string>
    <string name="txt_cargoEval">Cargo Evaluado</string>
    <string name="txt_relDepEval">Relación Dependencia</string>
    <string name="btn_name">Evaluados</string>
    <string name="img_description">Imagen Evaluador</string>
</resources>